--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 torch>=2.0.0
 torchvision>=0.15.0
-numpy<2.0.0,>=1.21.0
+numpy>=1.24.0,<2.3.0
 Pillow>=8.3.0
 matplotlib>=3.5.0
 tqdm>=4.64.0
@@ -10,4 +10,3 @@ opencv-python>=4.6.0
 flask>=2.3.0
 werkzeug>=2.3.0
 requests>=2.28.0
-
