--- a/.gitattributes
+++ b/.gitattributes
@@ -1,5 +1,9 @@
+# Track all PyTorch model files with Git LFS
 *.pth filter=lfs diff=lfs merge=lfs -text
 *.pt filter=lfs diff=lfs merge=lfs -text
 *.ckpt filter=lfs diff=lfs merge=lfs -text
+
+*.txt filter=lfs diff=lfs merge=lfs -text 
+# Track compressed archives (datasets, pre-trained weights)
 *.tar.gz filter=lfs diff=lfs merge=lfs -text
 *.zip filter=lfs diff=lfs merge=lfs -text
